<resources>
    <string name="app_name">Movie Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending">Trending</string>
    <string name="placeholder">Placeholder</string>
    <string name="discover">Discover</string>
    <string name="overview">Overview</string>
    <string name="vote_count">Vote Count</string>
    <string name="voting_average">Voting Average</string>
    <string name="language">Language</string>
    <string name="want">Want</string>
    <string name="watched">Watched</string>
    <string name="watched_movie">watched movie</string>
    <string name="want_movie">want movie</string>
    <string name="movie_description">movie description</string>
    <string name="movie_voting_count">movie voting count</string>
    <string name="movie_voting_average">movie voting average</string>
    <string name="movie_language">movie language</string>
    <string name="movie_title">movie title</string>
    <string name="movie_poster">movie poster</string>
    <string name="list_of_trending_movies">list of trending movies</string>
    <string name="movie_genre">movie genre</string>
    <string name="one_space"></string>
    <string name="watched_checkbox">watched checkbox</string>
    <string name="list_of_my_movies">list of my movies</string>
    <string name="list_of_movies_to_discover">list of movies to discover</string>
    <string name="my_movies">My Movies</string>
    <string name="home">Home</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="romance">Romance</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="crime">Crime</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="thriller">Thriller</string>
    <string name="animation">Animation</string>
    <string name="movie_release_date">movie release date</string>
    <string name="fullImageUrl">https://image.tmdb.org/t/p/original%s</string>
</resources>