<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.movieroom.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/discoverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <HorizontalScrollView
            android:id="@+id/categoriesScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discoverTextView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/actionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/action"
                    android:contentDescription="@string/action"/>

                <Button
                    android:id="@+id/adventureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/adventure"
                    android:contentDescription="@string/adventure"/>

                <Button
                    android:id="@+id/romanceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/romance"
                    android:contentDescription="@string/romance"/>

                <Button
                    android:id="@+id/comedyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/comedy"
                    android:contentDescription="@string/comedy"/>

                <Button
                    android:id="@+id/dramaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/drama"
                    android:contentDescription="@string/drama"/>

                <Button
                    android:id="@+id/familyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/family"
                    android:contentDescription="@string/family"/>

                <Button
                    android:id="@+id/crimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/crime"
                    android:contentDescription="@string/crime"/>

                <Button
                    android:id="@+id/fantasyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/fantasy"
                    android:contentDescription="@string/fantasy"/>

                <Button
                    android:id="@+id/horrorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/horror"
                    android:contentDescription="@string/horror"/>

                <Button
                    android:id="@+id/mysteryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/mystery"
                    android:contentDescription="@string/mystery"/>


                <Button
                    android:id="@+id/thrillerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/thriller"
                    android:contentDescription="@string/thriller"/>

                <Button
                    android:id="@+id/animationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/animation"
                    android:contentDescription="@string/animation"/>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/trendingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/categoriesScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trendingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_margin"
            listData="@{homeViewModel.movies}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:clipToPadding="false"
            android:contentDescription="@string/list_of_trending_movies"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trendingTextView"
            tools:listitem="@layout/display_movies_list_item"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trendingTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            movieApiStatus="@{homeViewModel.status}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
